<?xml version="1.0" encoding="utf-8"?>
<resources>
	<color name="holo_blue_light">#ff33b5e5</color>

    <string name="app_name">Alarm Clock</string>
    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>

    <string name="button_new">New</string>

    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_rate">Rate on Google Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>
    <string name="menu_item_sleep">Sleep</string>
    <string name="menu_item_graph">Stats</string>
    <string name="menu_item_alarm_list">Alarms</string>
    <string name="menu_item_calibrate">Calibrate</string>


    <color name="title_background_color">#000000</color>

	<string name="button_delete">Delete</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>

    <string name="sleep_activity_alarm_time">00:00</string>
    <string name="sleep_activity_awake_button">Awake</string>

    <string name="graph_activity_button_8hours">8 Hours</string>
    <string name="graph_activity_button_12hours">12 Hours</string>
    <string name="graph_activity_button_day">Day</string>

    <string name="calibration_complete_timer">Calibration Complete In: 5</string>

    <string name="barchart_time_slept_text">Total Time Slept</string>
    <string name="barchart_time_format">0 hrs 0 min</string>
    <string name="barchart_time_awake_text">Total Time Awake</string>
    <string name="barchart_time_restless_text">Total Time Restless</string>
    <string name="barchart_table_header_text">Times For Past 8 Hours</string>
    <string name="graph_activity_button_week">Week</string>

    <string name="custom_dialog_prior_text">Acceptable time prior to the set time the alarm can go off:</string>
    <string name="custom_dialog_start_sleep_text">Start sleep monitoring now?</string>
    <string name="custom_dialog_confirm_button">Confirm</string>
    <string name="custom_dialog_cancel_button">Cancel</string>

</resources>
