<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2014 Sheldon Neilson www.neilson.co.za

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_item_alarm_list"
        android:title="@string/menu_item_alarm_list"
        appcompat:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_item_new"
        android:title="@string/menu_item_new"
        android:icon="@drawable/glyphicons_432_plus"
        appcompat:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_item_sleep"
        android:title="@string/menu_item_sleep"
        android:icon="@drawable/sleep"
        appcompat:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_item_save"
        android:title="@string/menu_item_save"
        android:icon="@drawable/glyphicons_443_floppy_disk"
        appcompat:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_item_delete"
        android:title="@string/menu_item_delete"
        android:icon="@drawable/glyphicons_016_bin"
        appcompat:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/menu_item_graph"
        android:title="@string/menu_item_graph"
        appcompat:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_item_calibrate"
        android:title="@string/menu_item_calibrate"
        appcompat:showAsAction="never">
    </item>

</menu>