<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_prior_text"
        android:id="@+id/customDialogPriorText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:textColor="@color/our_blue"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customDialogPriorNumberPicker"
        android:layout_below="@+id/customDialogPriorText"
        android:layout_centerHorizontal="true"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_start_sleep_text"
        android:id="@+id/customDialogStartSleepText"
        android:padding="15dp"
        android:textColor="@color/our_blue"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_below="@+id/customDialogPriorNumberPicker"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@+id/customDialogStartSleepText"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_cancel_button"
            android:textColor="@color/our_orange" />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_confirm_button"
            android:textColor="@color/our_orange" />

    </LinearLayout>

</RelativeLayout>